added summary breaks to two posts

--- a/_posts/2017-6-20-diner.md
+++ b/_posts/2017-6-20-diner.md
@@ -11,9 +11,9 @@ vocab:
 - le nec plus ultra de: the very best in
 - le wapiti: large deer
 - cocasse: funny, amusing
-- un costard: familiar for a suit 
+- un costard: familiar for a suit
 ---
-Chaque fois que je suis obligé à partir pour travailler, je sors dîner avec mes enfants. Je sors avec chaque enfant à part. Cette photo montre moi et ma fille quand on vit à Washington en 2013 prêts à sortir dîner. J'étais venu de retourné d'un voyage d'affaires et je m'apprêtais à partir pour un autre voyage d'affaires.
+Chaque fois que je suis obligé à partir pour travailler, je sors dîner avec mes enfants. Je sors avec chaque enfant à part. <!--more--> Cette photo montre moi et ma fille quand on vit à Washington en 2013 prêts à sortir dîner. J'étais venu de retourné d'un voyage d'affaires et je m'apprêtais à partir pour un autre voyage d'affaires.
 
 On a dîné au meilleur restaurant en ville qui n'était pas du tout le meilleur auquel j'avais allé, néanmoins c'était le meilleur dans la région. Ma fille portait une robe, une petite veste et des bas. Moi, je porte toujours un costard quand je les emmène manger. Ils se comportent toujours bien alors qu'on sort manger.
 
